--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,18 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <h1>hello</h1>
+        <div class="popUpCreate">
+            <input type="text" />
+            <input type="text" />
+            <button>Create</button>
+        </div>
+        <header>
+            <h1>BlogMaster</h1>
+            <button id="openPopup">Create +</button>
+        </header>
+        <div class="wrap"></div>
     </body>
 </html>
